# med-deck-enrichment

./: .gitignore  CLAUDE.md  PLAN.md  WHERE_WE_LEFT_OFF.md  pyproject.toml  scratch.md
scripts/: extract_deck.py
src/med_deck_enrichment/: __init__.py  matcher.py
