[project]
name = "med-deck-enrichment"
version = "0.1.0"
description = "Semi-manual enrichment of the AnKing Anki deck with UMLS concepts and prerequisites"
requires-python = ">=3.11,<3.13"
dependencies = [
    "polars>=1.0",
    "pyzstd>=0.16.0",
    "quickumls>=1.4",
    "textual>=1.0",
]

[dependency-groups]
dev = [
    "ruff",
    "pyright",
    "pytest",
    "ipython",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/med_deck_enrichment"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
